# tfl-travel-concessions-pipeline

./: .gitignore  README.md  pyproject.toml
sample-data/: Care_leavers_20231031_Newham.xlsx  Care_leavers_20231031_NoColumns.xlsx  Care_leavers_20231031_NoWorksheet.xlsx  Care_leavers_20231031_Wandsworth.xlsx  Care_leavers_20231102_Hackney.xlsx  sample1.csv  sample2.csv
tests/: test_file_creator.py  test_file_process.py  test_logger.py  test_tfl.py
tfl_travel_concessions_pipeline/: __main__.py  cli.py  file_creator.py  file_process.py  logger.py  tfl.py
tfl_travel_concessions_pipeline/tests/: test_logger.py  test_tfl.py
