[tool.poetry]
name = "tfl-travel-concessions-pipeline"
version = "0.1.0"
description = "Processing Pipeline for the TfL Travel Concessions project"
authors = ["Dave Tickle <dave.tickle@socialfinance.org.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tfl_travel_concessions_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.1"
more-itertools = "^8.12.0"
sfdata-stream-parser = "^0.6.0"
xmlschema = "^1.10.0"
click = "^8.1.2"
PyYAML = "^6.0"
tablib = {extras = ["cli", "xlsx"], version = "^3.2.0"}
regex = "^2022.4.24"
dacite = "^1.6.0"
XlsxWriter = "^3.0.3"
pandas = "^1.4.2"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
click-log = "^0.4.0"
python-decouple = "^3.8"
faust-cchardet = "^2.1.19"
pydantic = "<2.0.0"
pydantic-yaml = "^1.1.1"
pyarrow = "^13.0.0"
fs = "^2.4.16"  
backports-strenum = "^1.2.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"
safety = "^1.10.3"
black = "^22.1.0"
flake8 = "^4.0.1"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
